# legacy-eloquence-wrapper

./: .gitignore  CMakeLists.txt  README.md
nvda_driver/synthDrivers/: _oldeloq.py  _oldeloq20.py  eloq20.py  oldeloquence.py
src/: eloquence_wrapper.cpp
